# oumi

./: .gitignore  .license_header.txt  .pre-commit-config.yaml  Dockerfile  README.md  pyproject.toml  slurm_job.sbatch
.github/workflows/: ci_tests.yaml  doctests.yaml  gpu_install_test.yaml  gpu_tests.yaml  install_test.yaml  pretest.yaml  release_docker.yaml
configs/apis/anthropic/: infer_claude3_7.yaml
configs/examples/bulk_inference/: gcp_job.yaml
configs/examples/deploy/: README.md  fireworks_deploy.yaml
configs/examples/grpo_letter_counting/: gcp_job.yaml  train.yaml
configs/examples/grpo_tldr/: gcp_job.yaml  train.yaml
configs/examples/grpo_verl_countdown/: gcp_job.yaml  slurm_job.yaml  train.yaml
configs/examples/grpo_verl_geometry3k/: gcp_job.yaml  train.yaml
configs/examples/grpo_verl_gsm8k/: slurm_job.yaml
configs/examples/misc/: grpo_verl_gsm8k_slurm_job.yaml  slurm_ray_init.sh
configs/examples/quantization/: README.md
configs/projects/coalm/: 405b_train.yaml  70b_train.yaml  8b_train.yaml
configs/projects/dcvlr/: README.md
configs/projects/halloumi/: 8b_train.yaml  README.md  gcp_job.yaml  halloumi_eval_notebook.ipynb  halloumi_inference_notebook.ipynb
configs/recipes/falcon_e/: README.md
configs/recipes/falcon_h1/: README.md
configs/recipes/gpt_oss/: README.md
configs/recipes/qwen3/: README.md
docs/: conf.py  index.md  quantization_guide.md
docs/_static/: custom.js
docs/about/: acknowledgements.md  citations.md  telemetry.md
docs/cli/: commands.md
docs/development/: contributing.md  dev_setup.md  docs_guide.md  style_guide.md
docs/faq/: oom.md  troubleshooting.md
docs/get_started/: core_concepts.md  installation.md  quickstart.md  tutorials.md
docs/resources/: recipes.md
docs/resources/datasets/: data_formats.md  datasets.md  other_datasets.md  preference_datasets.md  pretraining_datasets.md  sft_datasets.md  vl_sft_datasets.md
docs/resources/models/: custom_models.md  models.md  supported_models.md
docs/user_guides/: customization.md  quantization.md  tune.md
docs/user_guides/analyze/: analyze_config.md
docs/user_guides/evaluate/: custom_evals.md  evaluate.md  evaluation_config.md  generative_benchmarks.md  leaderboards.md  standardized_benchmarks.md
docs/user_guides/infer/: configuration.md  infer.md  inference_engines.md
docs/user_guides/judge/: built_in_judges.md  cli_usage.md  judge.md  judge_config.md
docs/user_guides/launch/: custom_cluster.md  kubernetes.md  launch.md
docs/user_guides/train/: configuration.md  train.md  training_methods.md
examples/quantization/: README.md  calibrated_quantization_config.yaml  quantization_config.yaml
notebooks/: Oumi - A Tour.ipynb  Oumi - Build your own Custom Evaluation (Hallucination Classifier).ipynb  Oumi - Build your own Custom Evaluation (Reliability Classifier).ipynb  Oumi - Bulk Inference of LLM APIs.ipynb  Oumi - Deploying a Job.ipynb  Oumi - Distill a Large Model.ipynb  Oumi - Evaluation with AlpacaEval 2.0.ipynb  Oumi - Evaluation with MT Bench.ipynb  Oumi - Evaluation with Oumi.ipynb  Oumi - Finetuning Tutorial.ipynb  Oumi - Launching Jobs on Custom Clusters.ipynb  Oumi - MiniMath-R1-1.5B.ipynb  Oumi - OpenEnv GRPO with trl.ipynb  Oumi - Quantization Tutorial.ipynb  Oumi - Running Jobs Remotely.ipynb  Oumi - Simple Judge.ipynb  Oumi - Train a Letter Counting Model using GRPO.ipynb  Oumi - Training CNN on Custom Dataset.ipynb  Oumi - Using NanoGPT.ipynb  Oumi - Using vLLM Engine for Inference.ipynb  Oumi - Vision Language Models.ipynb
scripts/: demo.py
scripts/benchmarks/: minimal_multimodal_training.py
scripts/frontier/: launcher.sh
src/oumi/: __init__.py  judge.py  judge_v2.py  train.py
src/oumi/builders/: __init__.py  callbacks.py  collators.py  data.py  inference_engines.py  models.py  processors.py  quantizers.py  training.py
src/oumi/cli/: alias.py  cli_utils.py  deploy.py  env.py  evaluate.py  fetch.py  infer.py  judge.py  judge_v2.py  launch.py  main.py  quantize.py  train.py
src/oumi/core/: distributed.py
src/oumi/datasets/: __init__.py  debug.py
src/oumi/deploy/: __init__.py  base_client.py  deploy_config.py  fireworks_api.py  fireworks_client.py  parasail_api.py  parasail_client.py  utils.py
src/oumi/evaluation/: lm_harness.py  save_utils.py
src/oumi/inference/: __init__.py  adaptive_concurrency_controller.py  anthropic_inference_engine.py  bedrock_inference_engine.py  cerebras_inference_engine.py  fireworks_inference_engine.py  gcp_inference_engine.py  gemini_inference_engine.py  llama_cpp_inference_engine.py  native_text_inference_engine.py  openai_inference_engine.py  openrouter_inference_engine.py  rate_limiter.py  remote_inference_engine.py  sglang_inference_engine.py  together_inference_engine.py  vllm_inference_engine.py
src/oumi/judges/: base_judge.py  simple_judge.py
src/oumi/judges_v2/: base_judge.py  simple_judge.py
src/oumi/mcp/: __init__.py  __main__.py  config_service.py  constants.py  docs_service.py  environment_service.py  job_launcher.py  job_logs.py  job_registry.py  job_runtime.py  job_service.py  models.py  preflight_service.py  server.py  sync_service.py
src/oumi/quantize/: __init__.py  awq_quantizer.py  base.py  bnb_quantizer.py  constants.py
src/oumi/utils/: analysis_utils.py  conversation_utils.py  device_utils.py  http.py  logging.py  packaging.py  serialization_utils.py  str_utils.py  torch_utils.py  verl_model_merger.py
tests/: conftest.py
tests/e2e/: test_eval_e2e.py  test_judges.py  test_notebooks.py  test_simple_judge.py  test_train_e2e.py
tests/integration/cli/: test_judge_e2e.py  test_judge_v2_e2e.py
tests/integration/datasets/: test_pretraining_datasets_full_epoch.py  test_sft_datasets_full_epoch.py  test_sft_datasets_load_datasets.py  test_sft_vision_datasets_load_datasets.py  test_vision_language_completions_only.py
tests/integration/evaluate/: test_evaluate_lm_harness.py
tests/scripts/: gcp_e2e_tests_job.yaml  lambda_e2e_tests_job.yaml  launch_tests.sh  predownload_for_github_gpu_tests.sh
tests/unit/: conftest.py  test_apache_license_header.py
(+339 files in other folders)
